--- a/print.html
+++ b/print.html
@@ -6,23 +6,15 @@
 <title>PDF + Image Merge Tool</title>
 <style>
 body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
-h2 {margin-bottom:15px;}
-input, button {margin:5px; padding:5px; font-size:12px;}
-#preview {border:1px solid #ccc; padding:10px; margin-top:10px; display:flex; flex-direction:column; align-items:center;}
-#preview img {margin:5px 0; object-fit:contain;}
-.btn3d {
-    padding:8px 20px; font-size:12px; border-radius:8px;
-    color:#fff; cursor:pointer; border:none;
-    background:linear-gradient(145deg,#3498db,#2980b9);
-    box-shadow:0 3px 0 #1c5980,0 5px 10px rgba(0,0,0,0.4);
-}
-.btn3d:active {
-    transform:translateY(3px);
-    box-shadow:0 1px 0 #1c5980,0 3px 6px rgba(0,0,0,0.4);
-}
-#imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:5px;}
+h2 {margin-bottom:20px;}
+input, button {margin:5px; padding:8px; font-size:14px;}
+#preview {border:1px solid #ccc; padding:10px; margin-top:20px; display:flex; flex-direction:column; align-items:center;}
+#preview img {margin-top:5px; object-fit:contain;}
+.btn3d {padding:8px 15px; font-size:12px; border-radius:8px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 3px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
+.btn3d:active {transform:translateY(3px); box-shadow:0 1px 0 #1c5980,0 2px 4px rgba(0,0,0,0.4);}
+#imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:10px;}
 .img-box {position:relative;}
-.delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:16px; height:16px; cursor:pointer;}
+.delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:18px; height:18px; cursor:pointer;}
 </style>
 </head>
 <body>
@@ -31,7 +23,7 @@ input, button {margin:5px; padding:5px; font-size:12px;}
 
 <label>Select PDF File:</label>
 <input type="file" id="pdfFile" accept="application/pdf">
-<label>Select Image File (Save Once):</label>
+<label>Select Voter Image (Save Once):</label>
 <input type="file" id="imgFile" accept="image/*">
 <div id="imagesList"></div>
 
@@ -48,47 +40,45 @@ input, button {margin:5px; padding:5px; font-size:12px;}
 
 <script>
 const { jsPDF } = window.jspdf;
-let pdfPages = [];
-let imgData = null;
+let pdfImages = [];
+let voterImg = null;
 
-// Load saved image
-const savedImage = localStorage.getItem('voterImage');
-if(savedImage){ imgData = savedImage; displayImage(imgData); }
+// Load saved voter image
+const savedImg = localStorage.getItem('voterImage');
+if(savedImg){ voterImg = savedImg; displayVoterImage(voterImg); }
 
-// PDF upload
 document.getElementById('pdfFile').addEventListener('change', async function(){
     const file = this.files[0];
     if(!file) return;
     const arrayBuffer = await file.arrayBuffer();
     const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
-    pdfPages = [];
+    pdfImages = [];
     for(let i=1;i<=pdf.numPages;i++){
         const page = await pdf.getPage(i);
         const viewport = page.getViewport({scale:2});
         const canvas = document.createElement('canvas');
-        const ctx = canvas.getContext('2d');
         canvas.width = viewport.width;
         canvas.height = viewport.height;
+        const ctx = canvas.getContext('2d');
         await page.render({canvasContext: ctx, viewport: viewport}).promise;
-        pdfPages.push(canvas.toDataURL('image/jpeg'));
+        pdfImages.push(canvas.toDataURL('image/jpeg'));
     }
     alert("PDF processed successfully!");
 });
 
-// Image upload
 document.getElementById('imgFile').addEventListener('change', function(){
     const file = this.files[0];
     if(!file) return;
     const reader = new FileReader();
     reader.onload = function(e){
-        imgData = e.target.result;
-        localStorage.setItem('voterImage', imgData);
-        displayImage(imgData);
+        voterImg = e.target.result;
+        localStorage.setItem('voterImage', voterImg);
+        displayVoterImage(voterImg);
     };
     reader.readAsDataURL(file);
 });
 
-function displayImage(src){
+function displayVoterImage(src){
     const div = document.getElementById('imagesList');
     div.innerHTML='';
     const box = document.createElement('div');
@@ -97,51 +87,51 @@ function displayImage(src){
     img.src=src; img.style.width='100px'; img.style.height='100px';
     const del = document.createElement('button');
     del.innerText='X'; del.className='delete-btn';
-    del.onclick=()=>{ localStorage.removeItem('voterImage'); imgData=null; div.innerHTML=''; };
+    del.onclick=()=>{ localStorage.removeItem('voterImage'); voterImg=null; div.innerHTML=''; };
     box.appendChild(img); box.appendChild(del); div.appendChild(box);
 }
 
-// Merge & Preview
+// Preview merged
 function mergePreview(){
-    if(pdfPages.length===0){ alert("Upload PDF first"); return; }
-    const previewDiv = document.getElementById('preview');
-    previewDiv.innerHTML='';
-    pdfPages.forEach(pageData=>{
+    if(pdfImages.length===0){ alert("Upload PDF first"); return; }
+    const preview = document.getElementById('preview');
+    preview.innerHTML='';
+    pdfImages.forEach(src=>{
         const img = new Image();
-        img.src = pageData;
-        img.style.width='120px'; // 2 inch approx
+        img.src=src;
+        img.style.width='120px';
         img.style.height='auto';
-        previewDiv.appendChild(img);
-        if(imgData){
-            const voterImg = new Image();
-            voterImg.src = imgData;
-            voterImg.style.width='50px'; // 2x2 inch approx in preview
-            voterImg.style.height='50px';
-            voterImg.style.marginTop='5px';
-            previewDiv.appendChild(voterImg);
-        }
+        preview.appendChild(img);
     });
+    if(voterImg){
+        const img = new Image();
+        img.src=voterImg;
+        img.style.width='40px';
+        img.style.height='40px';
+        preview.appendChild(img);
+    }
 }
 
-// Generate jsPDF
+// Generate single page jsPDF
 async function generateDoc(){
-    if(pdfPages.length===0){ alert("Upload PDF first"); return null; }
-    const doc = new jsPDF({unit:'mm', format:[50,200]});
-    for(const pageData of pdfPages){
+    if(pdfImages.length===0){ alert("Upload PDF first"); return null; }
+    const doc = new jsPDF({unit:'mm', format:[50,200]}); // 2 inch width
+    let y=5;
+    for(const src of pdfImages){
         const img = new Image();
-        img.src = pageData;
+        img.src=src;
         await new Promise(r=>img.onload=r);
         const imgProps = doc.getImageProperties(img);
-        const pdfWidth = 45;
-        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
-        doc.addImage(img,'JPEG',5,5,pdfWidth,pdfHeight);
-        if(imgData){
-            const voterImg = new Image();
-            voterImg.src = imgData;
-            await new Promise(r=>voterImg.onload=r);
-            doc.addImage(imgData,'JPEG',5,pdfHeight+10,40,40);
-        }
-        doc.addPage(); // next page
+        const pdfWidth = 45; // fit mini printer
+        const pdfHeight = (imgProps.height*pdfWidth)/imgProps.width;
+        doc.addImage(img,'JPEG',5,y,pdfWidth,pdfHeight);
+        y+=pdfHeight+2;
+    }
+    if(voterImg){
+        const img = new Image();
+        img.src=voterImg;
+        await new Promise(r=>img.onload=r);
+        doc.addImage(voterImg,'JPEG',5,y,40,40);
     }
     return doc;
 }
@@ -162,6 +152,5 @@ async function sendWhatsApp(){
     window.open(`https://wa.me/?text=Voter PDF: ${url}`,'_blank');
 }
 </script>
-
 </body>
 </html>
