--- a/print.html
+++ b/print.html
@@ -3,15 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PDF + Image Merge Tool</title>
+<title>PDF + Voter Image Merge Tool</title>
 <style>
 body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
-h2 {margin-bottom:20px;}
-input, button {margin:5px; padding:8px; font-size:14px;}
+h2 {margin-bottom:10px;}
+input, button {margin:5px; padding:8px; font-size:12px;}
 #preview {border:1px solid #ccc; padding:10px; margin-top:20px; display:flex; flex-direction:column; align-items:center;}
 #preview img {margin-top:5px; object-fit:contain;}
-.btn3d {padding:8px 15px; font-size:12px; border-radius:8px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 3px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
-.btn3d:active {transform:translateY(3px); box-shadow:0 1px 0 #1c5980,0 2px 4px rgba(0,0,0,0.4);}
+.btn3d {
+    padding:5px 12px; font-size:10px; border-radius:6px;
+    color:#fff; cursor:pointer; border:none;
+    background:linear-gradient(145deg,#3498db,#2980b9);
+    box-shadow:0 3px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);
+}
+.btn3d:active {transform:translateY(2px); box-shadow:0 1px 0 #1c5980,0 2px 4px rgba(0,0,0,0.4);}
 #imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:10px;}
 .img-box {position:relative;}
 .delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:18px; height:18px; cursor:pointer;}
@@ -19,7 +24,7 @@ input, button {margin:5px; padding:8px; font-size:14px;}
 </head>
 <body>
 
-<h2>PDF + Image Merge Tool</h2>
+<h2>PDF + Voter Image Merge Tool</h2>
 
 <label>Select PDF File:</label>
 <input type="file" id="pdfFile" accept="application/pdf">
@@ -42,17 +47,26 @@ input, button {margin:5px; padding:8px; font-size:14px;}
 const { jsPDF } = window.jspdf;
 let pdfImages = [];
 let voterImg = null;
+let voterData = {};
 
 // Load saved voter image
 const savedImg = localStorage.getItem('voterImage');
 if(savedImg){ voterImg = savedImg; displayVoterImage(voterImg); }
 
+// Safe extraction helper
+function extractFieldSafe(text, regex){ 
+    const m = text.match(regex); 
+    return m ? m[1].trim() : ''; 
+}
+
+// PDF Upload and extract fields
 document.getElementById('pdfFile').addEventListener('change', async function(){
     const file = this.files[0];
     if(!file) return;
     const arrayBuffer = await file.arrayBuffer();
     const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
     pdfImages = [];
+    voterData = {};
     for(let i=1;i<=pdf.numPages;i++){
         const page = await pdf.getPage(i);
         const viewport = page.getViewport({scale:2});
@@ -62,10 +76,22 @@ document.getElementById('pdfFile').addEventListener('change', async function(){
         const ctx = canvas.getContext('2d');
         await page.render({canvasContext: ctx, viewport: viewport}).promise;
         pdfImages.push(canvas.toDataURL('image/jpeg'));
+
+        const content = await page.getTextContent();
+        const text = content.items.map(item=>item.str).join(' ');
+
+        // Extract only required fields safely
+        voterData["First Name"] = extractFieldSafe(text,/पहिले नाव \/ First Name\s*:\s*(.*)/i);
+        voterData["Last Name"] = extractFieldSafe(text,/आडनाव \/ Last Name\s*:\s*(.*)/i);
+        voterData["EPIC No"] = extractFieldSafe(text,/EPIC क्रमांक \/ EPIC No\s*:\s*(.*)/i);
+        voterData["Polling Station"] = extractFieldSafe(text,/मतदान केंद्र \/ Polling Station\s*:\s*(.*)/i);
+        voterData["Part Number"] = extractFieldSafe(text,/भाग क्रमांक-भागाचे नाव \/ Part Number Part Name\s*:\s*(.*)/i);
+        voterData["Part Serial"] = extractFieldSafe(text,/भाग अनुक्रम क्रमांक \/ Part Serial Number\s*:\s*(.*)/i);
     }
-    alert("PDF processed successfully!");
+    alert("PDF processed and fields extracted safely!");
 });
 
+// Voter image upload and save
 document.getElementById('imgFile').addEventListener('change', function(){
     const file = this.files[0];
     if(!file) return;
@@ -91,11 +117,13 @@ function displayVoterImage(src){
     box.appendChild(img); box.appendChild(del); div.appendChild(box);
 }
 
-// Preview merged
+// Merge preview
 function mergePreview(){
     if(pdfImages.length===0){ alert("Upload PDF first"); return; }
     const preview = document.getElementById('preview');
     preview.innerHTML='';
+
+    // PDF pages preview
     pdfImages.forEach(src=>{
         const img = new Image();
         img.src=src;
@@ -103,6 +131,8 @@ function mergePreview(){
         img.style.height='auto';
         preview.appendChild(img);
     });
+
+    // Voter image preview
     if(voterImg){
         const img = new Image();
         img.src=voterImg;
@@ -110,32 +140,57 @@ function mergePreview(){
         img.style.height='40px';
         preview.appendChild(img);
     }
+
+    // Text fields preview
+    const fieldsDiv = document.createElement('div');
+    fieldsDiv.style.fontSize='10px';
+    fieldsDiv.style.marginTop='5px';
+    for(const [key,val] of Object.entries(voterData)){
+        const d = document.createElement('div');
+        d.innerText = `${key}: ${val}`;
+        fieldsDiv.appendChild(d);
+    }
+    preview.appendChild(fieldsDiv);
 }
 
-// Generate single page jsPDF
+// Generate jsPDF for mini printer
 async function generateDoc(){
     if(pdfImages.length===0){ alert("Upload PDF first"); return null; }
-    const doc = new jsPDF({unit:'mm', format:[50,200]}); // 2 inch width
+    const doc = new jsPDF({unit:'mm', format:[50,200]}); // 50mm width
     let y=5;
+
+    // PDF pages stacked
     for(const src of pdfImages){
         const img = new Image();
         img.src=src;
         await new Promise(r=>img.onload=r);
         const imgProps = doc.getImageProperties(img);
-        const pdfWidth = 45; // fit mini printer
+        const pdfWidth = 45;
         const pdfHeight = (imgProps.height*pdfWidth)/imgProps.width;
         doc.addImage(img,'JPEG',5,y,pdfWidth,pdfHeight);
         y+=pdfHeight+2;
     }
+
+    // Voter image
     if(voterImg){
         const img = new Image();
         img.src=voterImg;
         await new Promise(r=>img.onload=r);
         doc.addImage(voterImg,'JPEG',5,y,40,40);
+        y+=42;
     }
+
+    // Extracted text fields
+    for(const [key,val] of Object.entries(voterData)){
+        doc.text(`${key}: ${val}`,5,y);
+        y+=4;
+        if(y>190){ doc.addPage(); y=5; }
+    }
+
     return doc;
 }
 
+// Print / Download / WhatsApp
 async function printDoc(){
     const doc = await generateDoc();
     if(doc){ doc.autoPrint(); window.open(doc.output('bloburl'),'_blank'); }
