--- a/print.html
+++ b/print.html
@@ -6,16 +6,16 @@
 <title>Voter PDF + Image Tool</title>
 <style>
 body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
-h2 {margin-bottom:20px;}
-input, button {margin:5px; padding:8px; font-size:14px;}
-#preview {border:1px solid #ccc; padding:10px; margin-top:20px; display:flex; flex-direction:column; align-items:flex-start; width:150px;}
-#preview div {margin-bottom:4px; font-size:10px;}
-#preview img {margin-top:5px; object-fit:cover; width:50px; height:50px;}
-.btn3d {padding:8px 15px; font-size:12px; border-radius:8px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 3px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
+h2 {margin-bottom:15px;}
+input, button {margin:5px; padding:6px; font-size:12px;}
+#preview {border:1px solid #ccc; padding:10px; margin-top:15px; display:flex; flex-direction:column; align-items:center;}
+#preview div {width:100%; font-size:10px; text-align:left; margin-bottom:2px;}
+#preview img {margin-top:5px; object-fit:cover;}
+.btn3d {padding:6px 12px; font-size:12px; border-radius:8px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 3px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
 .btn3d:active {transform:translateY(3px); box-shadow:0 1px 0 #1c5980,0 2px 4px rgba(0,0,0,0.4);}
 #imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:10px;}
 .img-box {position:relative;}
-.delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:18px; height:18px; cursor:pointer;}
+.delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:16px; height:16px; cursor:pointer;}
 </style>
 </head>
 <body>
@@ -37,52 +37,18 @@ input, button {margin:5px; padding:8px; font-size:14px;}
 <div id="preview"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tesseract.js/4.0.2/tesseract.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <script>
 const { jsPDF } = window.jspdf;
-let pdfText = {};
+let pdfText = {};  // Extracted fields
 let voterImg = null;
 
 // Load saved voter image
 const savedImg = localStorage.getItem('voterImage');
 if(savedImg){ voterImg = savedImg; displayVoterImage(voterImg); }
 
-// PDF Upload & extract required fields
-document.getElementById('pdfFile').addEventListener('change', async function(){
-    const file = this.files[0];
-    if(!file) return;
-    const arrayBuffer = await file.arrayBuffer();
-    const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
-    let fullText = '';
-    for(let i=1;i<=pdf.numPages;i++){
-        const page = await pdf.getPage(i);
-        const content = await page.getTextContent();
-        const pageText = content.items.map(item=>item.str).join(' ');
-        fullText += pageText + '\n';
-    }
-    pdfText = extractFields(fullText);
-    alert("PDF processed successfully!");
-});
-
-// Extract fields safely
-function extractFields(text){
-    const fields = {};
-    fields['First Name'] = matchField(text,/First Name\s*\/\s*पहिले नाव\s*:\s*(.*)/i);
-    fields['Last Name'] = matchField(text,/Last Name\s*\/\s*आडनाव\s*:\s*(.*)/i);
-    fields['EPIC No'] = matchField(text,/EPIC No\s*\/\s*EPIC क्रमांक\s*:\s*(.*)/i);
-    fields['Polling Station'] = matchField(text,/Polling Station\s*\/\s*मतदान केंद्र\s*:\s*(.*)/i);
-    fields['Part Number'] = matchField(text,/Part Number\s*\/\s*भाग क्रमांक-भागाचे नाव\s*:\s*(.*)/i);
-    fields['Part Serial'] = matchField(text,/Part Serial\s*\/\s*भाग अनुक्रम क्रमांक\s*:\s*(.*)/i);
-    return fields;
-}
-
-function matchField(text, regex){
-    const m = text.match(regex);
-    return m ? m[1].trim() : '';
-}
-
-// Image upload & save
 document.getElementById('imgFile').addEventListener('change', function(){
     const file = this.files[0];
     if(!file) return;
@@ -101,36 +67,80 @@ function displayVoterImage(src){
     const box = document.createElement('div');
     box.className='img-box';
     const img=document.createElement('img');
-    img.src=src; img.style.width='50px'; img.style.height='50px';
+    img.src=src; img.style.width='100px'; img.style.height='100px';
     const del = document.createElement('button');
     del.innerText='X'; del.className='delete-btn';
     del.onclick=()=>{ localStorage.removeItem('voterImage'); voterImg=null; div.innerHTML=''; };
     box.appendChild(img); box.appendChild(del); div.appendChild(box);
 }
 
-// Preview merged
+// PDF upload & extract text
+document.getElementById('pdfFile').addEventListener('change', async function(){
+    const file = this.files[0];
+    if(!file) return;
+
+    const arrayBuffer = await file.arrayBuffer();
+    const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
+
+    let fullText = '';
+    for(let i=1;i<=pdf.numPages;i++){
+        const page = await pdf.getPage(i);
+        const viewport = page.getViewport({scale:2});
+        const canvas = document.createElement('canvas');
+        canvas.width = viewport.width;
+        canvas.height = viewport.height;
+        const ctx = canvas.getContext('2d');
+        await page.render({canvasContext: ctx, viewport: viewport}).promise;
+        const imgData = canvas.toDataURL('image/png');
+
+        // OCR using Tesseract.js
+        const result = await Tesseract.recognize(imgData, 'eng+mar', { logger: m => console.log(m) });
+        fullText += result.data.text + '\n';
+    }
+
+    pdfText = extractFields(fullText);
+    alert("PDF processed and text extracted!");
+});
+
+// Extract required fields safely
+function extractFields(text){
+    const getLine = (regex) => { const m=text.match(regex); return m? m[1].trim():''; };
+    return {
+        'First Name': getLine(/First Name\s*[:\-]\s*(.*)/i) || getLine(/पहिले नाव\s*[:\-]\s*(.*)/i),
+        'Last Name': getLine(/Last Name\s*[:\-]\s*(.*)/i) || getLine(/आडनाव\s*[:\-]\s*(.*)/i),
+        'EPIC No': getLine(/EPIC No\s*[:\-]\s*(.*)/i) || getLine(/EPIC क्रमांक\s*[:\-]\s*(.*)/i),
+        'Polling Station': getLine(/Polling Station\s*[:\-]\s*(.*)/i) || getLine(/मतदान केंद्र\s*[:\-]\s*(.*)/i),
+        'Part Number': getLine(/Part Number\s*[:\-]\s*(.*)/i) || getLine(/भाग क्रमांक[\-]भागाचे नाव\s*[:\-]\s*(.*)/i),
+        'Part Serial': getLine(/Part Serial\s*[:\-]\s*(.*)/i) || getLine(/भाग अनुक्रम क्रमांक\s*[:\-]\s*(.*)/i)
+    };
+}
+
+// Merge preview
 function mergePreview(){
+    if(!pdfText){ alert("Upload PDF first"); return; }
     const preview = document.getElementById('preview');
     preview.innerHTML='';
-    for(const key of ['First Name','Last Name','EPIC No','Polling Station','Part Number','Part Serial']){
-        const div = document.createElement('div');
-        div.innerText = `${key}: ${pdfText[key] || ''}`;
+    for(const [k,v] of Object.entries(pdfText)){
+        const div=document.createElement('div');
+        div.innerText = `${k}: ${v}`;
         preview.appendChild(div);
     }
     if(voterImg){
         const img = new Image();
         img.src = voterImg;
+        img.style.width='40px';  // 2 inch approx
+        img.style.height='40px';
         preview.appendChild(img);
     }
 }
 
 // Generate jsPDF
 async function generateDoc(){
-    const doc = new jsPDF({unit:'mm', format:[50,200]});
+    if(!pdfText){ alert("Upload PDF first"); return null; }
+    const doc = new jsPDF({unit:'mm', format:[50,200]}); // mini printer width
     let y=5;
-    for(const key of ['First Name','Last Name','EPIC No','Polling Station','Part Number','Part Serial']){
-        const text = `${key}: ${pdfText[key] || ''}`;
-        doc.text(text,5,y);
+    for(const [k,v] of Object.entries(pdfText)){
+        doc.text(`${k}: ${v}`,5,y);
         y+=5;
     }
     if(voterImg){
@@ -146,12 +156,10 @@ async function printDoc(){
     const doc = await generateDoc();
     if(doc){ doc.autoPrint(); window.open(doc.output('bloburl'),'_blank'); }
 }
-
 async function downloadDoc(){
     const doc = await generateDoc();
     if(doc) doc.save('Voter_Merged.pdf');
 }
-
 async function sendWhatsApp(){
     const doc = await generateDoc();
     const blob = doc.output('blob');
