--- a/print.html
+++ b/print.html
@@ -3,161 +3,149 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Voter PDF OCR + Image Tool</title>
+<title>A6 Voter Slip</title>
+
 <style>
-body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
-h2 {margin-bottom:15px;}
-input, button {margin:5px; padding:6px; font-size:12px;}
-#preview {border:1px solid #ccc; padding:10px; margin-top:15px; display:flex; flex-direction:column; align-items:flex-start;}
-#preview div {width:100%; font-size:10px; text-align:left; margin-bottom:2px;}
-#preview img {margin-top:5px; object-fit:cover;}
-.btn3d {padding:6px 12px; font-size:12px; border-radius:8px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 3px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
-.btn3d:active {transform:translateY(3px); box-shadow:0 1px 0 #1c5980,0 2px 4px rgba(0,0,0,0.4);}
-#imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:10px;}
-.img-box {position:relative;}
-.delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:16px; height:16px; cursor:pointer;}
+body { font-family: Arial; background:#e7e7e7; margin:0; padding:0; }
+.container { width: 360px; margin:20px auto; background:white; padding:15px; 
+    border-radius:10px; box-shadow:0 0 5px #aaa; }
+
+#previewImg { width:120px; height:150px; object-fit:cover; border:1px solid #333; 
+    display:block; margin:10px auto; }
+
+input, select { width:100%; padding:8px; margin-top:6px; border-radius:5px; 
+    border:1px solid #999; }
+button { width:100%; padding:10px; margin-top:10px; border:none; background:#0066ff; 
+    color:white; border-radius:5px; cursor:pointer; }
+button:hover { background:#004ecc; }
+
+#slipArea { width: 100%; padding:10px; margin-top:20px; border:2px solid #000; 
+    border-radius:8px; background:white; }
+.row { margin-bottom:6px; font-size:15px; }
+strong { width:140px; display:inline-block; }
+.title { text-align:center; font-size:18px; font-weight:bold; margin-bottom:10px; }
 </style>
+
 </head>
 <body>
 
-<h2>Voter PDF OCR + Image Tool</h2>
+<div class="container">
 
-<label>Select PDF File:</label>
-<input type="file" id="pdfFile" accept="application/pdf">
-<label>Select Voter Image (Save Once):</label>
-<input type="file" id="imgFile" accept="image/*">
-<div id="imagesList"></div>
+<h3 style="text-align:center;">A6 Voter Slip Generator</h3>
 
-<button class="btn3d" onclick="mergePreview()">Merge & Preview</button>
-<button class="btn3d" onclick="printDoc()">Print</button>
-<button class="btn3d" onclick="downloadDoc()">Download</button>
+<input type="file" id="imgUpload" accept="image/*" onchange="saveImage(event)">
+<img id="previewImg">
 
-<h3>Preview:</h3>
-<div id="preview"></div>
+<input id="fname" placeholder="First Name">
+<input id="lname" placeholder="Last Name">
+<input id="rfname" placeholder="Relative First Name">
+<input id="rlname" placeholder="Relative Last Name">
+<input id="age" placeholder="Age">
+<select id="gender">
+    <option value="">Gender</option>
+    <option>Male</option>
+    <option>Female</option>
+</select>
+<input id="epic" placeholder="EPIC Number">
+<input id="state" placeholder="State">
+<input id="parliament" placeholder="Parliamentary Constituency">
+<input id="assembly" placeholder="Assembly Constituency">
+<input id="polling" placeholder="Polling Station">
+<input id="partno" placeholder="Part Number">
+<input id="serial" placeholder="Serial Number">
+<input id="date" placeholder="Polling Date">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tesseract.js/4.0.2/tesseract.min.js"></script>
+<button onclick="generateSlip()">Generate Slip</button>
+<button onclick="downloadPDF()">Download A6 PDF</button>
+
+<div id="slipArea"></div>
+
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <script>
-const { jsPDF } = window.jspdf;
-let pdfText = {};  // Extracted fields
-let voterImg = null;
 
-// Load saved voter image
-const savedImg = localStorage.getItem('voterImage');
-if(savedImg){ voterImg = savedImg; displayVoterImage(voterImg); }
+// Load saved image + data
+window.onload = function () {
+    let img = localStorage.getItem("voterImg");
+    if (img) document.getElementById("previewImg").src = img;
 
-document.getElementById('imgFile').addEventListener('change', function(){
-    const file = this.files[0];
-    if(!file) return;
+    let fields = ["fname","lname","rfname","rlname","age","gender","epic","state",
+                  "parliament","assembly","polling","partno","serial","date"];
+
+    fields.forEach(id=>{
+        if(localStorage.getItem(id)) document.getElementById(id).value = localStorage.getItem(id);
+    });
+};
+
+// Save Image
+function saveImage(event) {
+    const file = event.target.files[0];
     const reader = new FileReader();
-    reader.onload = function(e){
-        voterImg = e.target.result;
-        localStorage.setItem('voterImage', voterImg);
-        displayVoterImage(voterImg);
-    };
+    reader.onload = function(){
+        localStorage.setItem("voterImg", reader.result);
+        document.getElementById("previewImg").src = reader.result;
+    }
     reader.readAsDataURL(file);
-});
-
-function displayVoterImage(src){
-    const div = document.getElementById('imagesList');
-    div.innerHTML='';
-    const box = document.createElement('div');
-    box.className='img-box';
-    const img=document.createElement('img');
-    img.src=src; img.style.width='100px'; img.style.height='100px';
-    const del = document.createElement('button');
-    del.innerText='X'; del.className='delete-btn';
-    del.onclick=()=>{ localStorage.removeItem('voterImage'); voterImg=null; div.innerHTML=''; };
-    box.appendChild(img); box.appendChild(del); div.appendChild(box);
 }
 
-// PDF upload & OCR
-document.getElementById('pdfFile').addEventListener('change', async function(){
-    const file = this.files[0];
-    if(!file) return;
-    const arrayBuffer = await file.arrayBuffer();
-    const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
-    let fullText = '';
-    for(let i=1;i<=pdf.numPages;i++){
-        const page = await pdf.getPage(i);
-        const viewport = page.getViewport({scale:2});
-        const canvas = document.createElement('canvas');
-        canvas.width = viewport.width;
-        canvas.height = viewport.height;
-        const ctx = canvas.getContext('2d');
-        await page.render({canvasContext: ctx, viewport: viewport}).promise;
-        const imgData = canvas.toDataURL('image/png');
+// Save Text Data
+function autoStore() {
+    let fields = ["fname","lname","rfname","rlname","age","gender","epic","state",
+                  "parliament","assembly","polling","partno","serial","date"];
 
-        const result = await Tesseract.recognize(imgData, 'eng+mar',{
-            logger: m => console.log(m)
-        });
-        fullText += result.data.text + '\n';
+    fields.forEach(id=>{
+        localStorage.setItem(id, document.getElementById(id).value);
+    });
+}
+document.querySelectorAll("input,select").forEach(e=>e.addEventListener("input",autoStore));
+
+// Generate Slip
+function generateSlip() {
+
+    let pimg = document.getElementById("previewImg").src;
+
+    let html = `
+        <div class="title">VOTER INFORMATION SLIP</div>
+        <img src="${pimg}" style="width:120px;height:150px;object-fit:cover;border:1px solid #000;margin:auto;display:block;">
+        <div class="row"><strong>Name:</strong> ${fname.value} ${lname.value}</div>
+        <div class="row"><strong>Relative Name:</strong> ${rfname.value} ${rlname.value}</div>
+        <div class="row"><strong>Age:</strong> ${age.value}</div>
+        <div class="row"><strong>Gender:</strong> ${gender.value}</div>
+        <div class="row"><strong>EPIC No:</strong> ${epic.value}</div>
+        <div class="row"><strong>State:</strong> ${state.value}</div>
+        <div class="row"><strong>Parliamentary:</strong> ${parliament.value}</div>
+        <div class="row"><strong>Assembly:</strong> ${assembly.value}</div>
+        <div class="row"><strong>Polling Station:</strong> ${polling.value}</div>
+        <div class="row"><strong>Part No:</strong> ${partno.value}</div>
+        <div class="row"><strong>Serial No:</strong> ${serial.value}</div>
+        <div class="row"><strong>Polling Date:</strong> ${date.value}</div>
+    `;
+
+    document.getElementById("slipArea").innerHTML = html;
+}
+
+// Download A6 PDF
+async function downloadPDF() {
+
+    if (!slipArea.innerHTML.trim()) {
+        alert("First click on Generate Slip.");
+        return;
     }
-    pdfText = extractFields(fullText);
-    alert("PDF OCR completed!");
-});
 
-// Extract required fields safely
-function extractFields(text){
-    const getLine = (regex) => { const m=text.match(regex); return m? m[1].trim():''; };
-    return {
-        'First Name': getLine(/First Name\s*[:\-]\s*(.*)/i) || getLine(/पहिले नाव\s*[:\-]\s*(.*)/i),
-        'Last Name': getLine(/Last Name\s*[:\-]\s*(.*)/i) || getLine(/आडनाव\s*[:\-]\s*(.*)/i),
-        'EPIC No': getLine(/EPIC No\s*[:\-]\s*(.*)/i) || getLine(/EPIC क्रमांक\s*[:\-]\s*(.*)/i),
-        'Polling Station': getLine(/Polling Station\s*[:\-]\s*(.*)/i) || getLine(/मतदान केंद्र\s*[:\-]\s*(.*)/i),
-        'Part Number': getLine(/Part Number\s*[:\-]\s*(.*)/i) || getLine(/भाग क्रमांक\s*[:\-]\s*(.*)/i),
-        'Part Name': getLine(/Part Name\s*[:\-]\s*(.*)/i) || getLine(/भागाचे नाव\s*[:\-]\s*(.*)/i),
-        'Part Serial': getLine(/Part Serial\s*[:\-]\s*(.*)/i) || getLine(/भाग अनुक्रम क्रमांक\s*[:\-]\s*(.*)/i)
-    };
+    const { jsPDF } = window.jspdf;
+
+    const canvas = await html2canvas(document.getElementById("slipArea"), { scale:3 });
+    const img = canvas.toDataURL("image/jpeg",1.0);
+
+    let pdf = new jsPDF("p", "mm", [105, 148]);
+    pdf.addImage(img, "JPEG", 3, 3, 99, 142);
+    pdf.save("VoterSlip-A6.pdf");
 }
 
-// Merge preview
-function mergePreview(){
-    if(!pdfText){ alert("Upload PDF first"); return; }
-    const preview = document.getElementById('preview');
-    preview.innerHTML='';
-    for(const [k,v] of Object.entries(pdfText)){
-        const div=document.createElement('div');
-        div.innerText = `${k}: ${v}`;
-        preview.appendChild(div);
-    }
-    if(voterImg){
-        const img = new Image();
-        img.src=voterImg;
-        img.style.width='40px';
-        img.style.height='40px';
-        preview.appendChild(img);
-    }
-}
-
-// Generate jsPDF
-async function generateDoc(){
-    if(!pdfText){ alert("Upload PDF first"); return null; }
-    const doc = new jsPDF({unit:'mm', format:[50,200]});
-    let y=5;
-    for(const [k,v] of Object.entries(pdfText)){
-        doc.text(`${k}: ${v}`,5,y);
-        y+=6; // line spacing
-    }
-    if(voterImg){
-        const img = new Image();
-        img.src=voterImg;
-        await new Promise(r=>img.onload=r);
-        doc.addImage(voterImg,'JPEG',5,y,40,40);
-    }
-    return doc;
-}
-
-async function printDoc(){
-    const doc = await generateDoc();
-    if(doc){ doc.autoPrint(); window.open(doc.output('bloburl'),'_blank'); }
-}
-async function downloadDoc(){
-    const doc = await generateDoc();
-    if(doc) doc.save('Voter_Merged.pdf');
-}
 </script>
+
 </body>
 </html>
